--- a/Assignment2/Assignment2/appsettings.json
+++ b/Assignment2/Assignment2/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Assignment2-A2E9BBC0-292E-4A2B-90F6-5459D807A067;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=tcp:rohandemo.database.windows.net,1433;Initial Catalog=tennis;Persist Security Info=False;User ID=rohan;Password=AssignmentTwo2019;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
